syntax = "proto3";

option java_multiple_files = true;
option java_package = "de.hhu.bsinfo.hadronio.example.grpc.benchmark";
option java_outer_classname = "BenchmarkProto";

import "google/protobuf/empty.proto";

package benchmark;

service Benchmark {
  rpc benchmark (BenchmarkMessage) returns (BenchmarkMessage) {}
  rpc connect (google.protobuf.Empty) returns (ClientIdMessage) {}
  rpc startBenchmark (ClientIdMessage) returns (StartBenchmarkMessage) {}
  rpc endBenchmark (ClientIdMessage) returns (google.protobuf.Empty) {}
}

message BenchmarkMessage {
  bytes content = 1;
}

message ClientIdMessage {
  uint32 id = 1;
}

message StartBenchmarkMessage {
  bool start = 1;
}